[gd_scene load_steps=17 format=3 uid="uid://c3fogervwojm4"]

[ext_resource type="Script" path="res://User_Name.gd" id="1_678le"]
[ext_resource type="Texture2D" uid="uid://dxufiimdt72sk" path="res://sprites/1000000947.jpg" id="1_pxjjt"]
[ext_resource type="Texture2D" uid="uid://c0iwej7mair62" path="res://sprites/CloseRegular (1).png" id="2_x4hqw"]
[ext_resource type="Texture2D" uid="uid://c5u8nhip0fapn" path="res://sprites/Gamedev Radar ICON.png" id="5_i2i67"]
[ext_resource type="Script" path="res://window.gd" id="5_salh6"]
[ext_resource type="Script" path="res://appButton.gd" id="7_cfssb"]
[ext_resource type="Texture2D" uid="uid://bqgr3bolbukd7" path="res://sprites/Window.webp" id="8_31eub"]
[ext_resource type="Texture2D" uid="uid://buvpiibdtfytw" path="res://sprites/windows-cursor-icon-10-removebg-preview.png" id="8_k2mab"]
[ext_resource type="Script" path="res://mouse.gd" id="9_4o6ex"]
[ext_resource type="Script" path="res://username_&_data.gd" id="10_gu0xh"]
[ext_resource type="Script" path="res://close_button.gd" id="11_u55vk"]
[ext_resource type="Script" path="res://sub_viewport.gd" id="12_a2ytu"]
[ext_resource type="Script" path="res://select_box.gd" id="13_grsae"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekc60"]
bg_color = Color(0, 0, 0.509804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cmeoe"]
texture = ExtResource("8_31eub")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_m10nw"]
font_size = 27

[node name="WinDesktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_678le")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -9.0
offset_top = -13.0
offset_right = 1928.0
offset_bottom = 1126.0
texture = ExtResource("1_pxjjt")
expand_mode = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -74.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ekc60")

[node name="Username & Data" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 1012.0
offset_top = 1.0
offset_right = 1293.0
offset_bottom = 192.0
text = "cc
"
script = ExtResource("10_gu0xh")

[node name="RadarApp" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 70.0
offset_right = 140.0
offset_bottom = 210.25
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 115
text = "Radar"
icon = ExtResource("5_i2i67")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("7_cfssb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5
follow_viewport_enabled = true

[node name="Mouse" type="Sprite2D" parent="CanvasLayer"]
top_level = true
visibility_layer = 3
z_index = 925
position = Vector2(365, 116)
scale = Vector2(0.09, 0.09)
texture = ExtResource("8_k2mab")
script = ExtResource("9_4o6ex")

[node name="RadarWindow" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.305
anchor_top = 0.241
anchor_right = 0.761
anchor_bottom = 0.801
offset_left = -0.360016
offset_top = 56.832
offset_right = 14.3279
offset_bottom = -0.0480347
theme_override_styles/panel = SubResource("StyleBoxTexture_cmeoe")
script = ExtResource("5_salh6")

[node name="BlueBar" type="ColorRect" parent="RadarWindow"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0
color = Color(0, 0, 0.509804, 1)

[node name="Label" type="Label" parent="RadarWindow/BlueBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 78.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Radar.EXE"
label_settings = SubResource("LabelSettings_m10nw")
vertical_alignment = 1

[node name="ResizeHandle_Left" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ResizeHandle_Right" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="ResizeHandle_Top" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="ResizeHandle_Bottom" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8

[node name="ResizeHandle_TopLeft" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ResizeHandle_TopRight" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ResizeHandle_BottomLeft" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="ResizeHandle_BottomRight" type="Control" parent="RadarWindow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="CloseButton" type="Button" parent="RadarWindow"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("2_x4hqw")
vertical_icon_alignment = 0
script = ExtResource("11_u55vk")

[node name="SubViewport" type="SubViewport" parent="RadarWindow"]
script = ExtResource("12_a2ytu")

[node name="Select Box" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
color = Color(0.270588, 0.74902, 0.760784, 0.462745)
script = ExtResource("13_grsae")
